fix: better spacing for <li> in .md files

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -57,6 +57,10 @@
     margin-bottom: 10px;
   }
 
+  li {
+    margin-bottom: 10px;
+  }
+
   span,
   p,
   figure,
